nginx marche avec 3 docker de l'app

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,10 +3,6 @@ FROM python:3.8
 WORKDIR /app
 COPY . .
 RUN pip3 install --no-cache-dir -r requirements.txt
-
-ENV AWS_SHARED_CREDENTIALS_FILE=/app/put_yr_credentials_here/credentials
-ENV AWS_PROFILE=csloginteacher
-ENV AWS_PROFILE=csloginstudent
-
+EXPOSE 5000:5000
 CMD [ "python3", "./src/flaskapp.py"]
 
