--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,19 +1,17 @@
-upstream sampleapp {
-    server web:8000;
+user  nginx;
+events {
+	worker_connections   1000;
 }
-
-server {
-
-    listen 80;
-
-    location / {
-        proxy_pass http://sampleapp;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
-    }
-    location /static/ {
-        alias /home/app/microservice/static/;
-    }
-
+http {
+	upstream flaskapp {#vérifier adresse ip du cluster 
+		server 172.18.0.2:5000;
+		server 172.18.0.3:5000;
+		server 172.18.0.4:5000;
+	}
+	server {
+		listen 80;
+			location / {
+				proxy_pass http://flaskapp;
+			}
+    		}
 }
