--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -10,6 +10,7 @@ http {
 	}
 	server {
 		listen 80;
+		server_name filrouge.louis.p2021.ajoga.fr;
 			location / {
 				proxy_pass http://flaskapp;
 			}
