demande d'un nouveau certificat car le precedent avait ete affiche, reorganisation du rep de l app

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 user  nginx;
 
 events {
-	worker_connections   3;
+	worker_connections 100;
 }
 
 http 
@@ -13,23 +13,8 @@ http
 	{
 		listen 80;
 		server_name filrouge.louis.p2021.ajoga.fr;
-		access_log /var/log/nginx/access.log;
-		limit_req_status 429; #limit request message 
-		
-		# Error responses
-		error_page 404 = @400;         # Invalid paths are treated as bad requests
-		proxy_intercept_errors on;     # Do not send backend errors to the client
-		
-	    	location /.well-known/acme-challenge/ {
-    			root /var/www/certbot;
-		}
 		location / 
 		{
-			auth_basic "Administrator's area";
-			auth_basic_user_file /etc/nginx/.htpasswd;
-			client_max_body_size 15M;
-			limit_req zone=mylimit burst=2; #put 2 req max in a Queue
-			#proxy_pass http://flaskapp;
 			return 301 https://$host$request_uri;
 		}
     	}
@@ -37,15 +22,26 @@ http
     	server 
     	{
     		listen 443 ssl;
-    		server_name filrouge.louis.p2021.ajoga.fr;
+	
+		server_name filrouge.louis.p2021.ajoga.fr;
+		access_log /var/log/nginx/access.log;
+		limit_req_status 429; #limit request message 
+		
+		# Error responses
+		error_page 404 = @400;         # Invalid paths are treated as bad requests
+		proxy_intercept_errors on;     # Do not send backend errors to the client
+    		
     		ssl_certificate /etc/letsencrypt/live/filrouge.louis.p2021.ajoga.fr/fullchain.pem;
 		ssl_certificate_key /etc/letsencrypt/live/filrouge.louis.p2021.ajoga.fr/privkey.pem;
 		include /etc/letsencrypt/options-ssl-nginx.conf;
 		ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     		location /
     		{
-    		
-    		
+			auth_basic "Administrator's area";
+                        auth_basic_user_file /etc/nginx/.htpasswd;
+                        client_max_body_size 15M;
+                        limit_req zone=mylimit burst=2; #put 2 req max in a Queue
+                        proxy_pass http://flaskapp;   		
     		}
     	}
     	
