--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,7 +8,7 @@ http
 {
 	#limit of 3 requests per second for an ip adress
 	limit_req_zone $binary_remote_addr zone=mylimit:1m rate=3r/s;
-	
+	sendfile        on;	
 	server 
 	{
 		listen 80;
@@ -47,9 +47,9 @@ http
     	
     	upstream flaskapp 
     	{ 
-		server 172.18.0.1:5000;
-		server 172.18.0.2:5000;
-		server 172.18.0.3:5000;
-		server 172.18.0.4:5000;
+		server 172.20.0.1:5000;
+		server 172.20.0.2:5000;
+		server 172.20.0.3:5000;
+		server 172.20.0.4:5000;
 	}
 }
