--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,6 +1,7 @@
 requests==2.22.0
-Flask_RESTful==0.3.8
-boto3==1.16.56
+boto3==1.17.42
 Flask==1.1.2
+flask_restful==0.3.8
+flask_swagger_ui==3.36.0
 Pillow==8.1.2
 PyPDF2==1.26.0
