--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,46 @@
 version: "3.5"
 services:
-  flaskapp:
-    build: ./app
-    environment: 
-      - AWS_SHARED_CREDENTIALS_FILE=/aws/credentials
-      - AWS_PROFILE=csloginteacher
-      - AWS_PROFILE=csloginstudent
-    volumes:
-     - ./app/put_yr_credentials_here/credentials:/aws/credentials
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
       - "443:443"
-    depends_on:
-      - flaskapp
     volumes: 
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/.htpasswd:/etc/nginx/.htpasswd
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+    networks:
+      cluster:
+         ipv4_address: 10.0.0.2
   certbot:
     image: certbot/certbot
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+    depends_on:
+      - nginx
     entrypoint:
       "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      cluster:
+         ipv4_address: 10.0.0.3
+  flaskapp:
+    build: ./app
+    environment:
+      - AWS_SHARED_CREDENTIALS_FILE=/aws/credentials
+      - AWS_PROFILE=csloginteacher
+      - AWS_PROFILE=csloginstudent
+    volumes:
+     - ./app/put_yr_credentials_here/credentials:/aws/credentials
+    depends_on:
+      - nginx
+      - certbot
+    networks:
+      - cluster
+networks:
+    cluster:
+        ipam:
+            driver: default
+            config:
+                - subnet: 10.0.0.0/16
