--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -47,9 +47,9 @@ http
     	
     	upstream flaskapp 
     	{ 
-		server 172.20.0.1:5000;
-		server 172.20.0.2:5000;
-		server 172.20.0.3:5000;
-		server 172.20.0.4:5000;
+		server 10.0.0.4:5000 max_fails=1;
+		server 10.0.0.5:5000 max_fails=1;
+		server 10.0.0.6:5000 max_fails=1;
+		server 10.0.0.7:5000 max_fails=1;
 	}
 }
